--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-<script type="text/javascript" src="https://unpkg.com/@hendt/ebay-api/lib/ebay-api.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@hendt/ebay-api@latest/lib/ebay-api.min.js"></script>
 <script type="text/javascript">
   function getItem(form) {
     const eBay = new eBayApi({
