--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
 
   <title>eBay API Browser example</title>
-  <meta name="description" content="eBay API Browser">
+  <meta name="description" content="eBay Node API in TypeScript with Browser support">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <style>
-    h1 {
-      font-family: sans-serif;
-    }
     label {
       display: block;
       margin: 10px 0;
+      display: flex;
     }
 
     label > span {
       display: inline-block;
-      min-width: 180px;
+      min-width: 130px;
+      flex-shrink: 0;
     }
 
     input[type="text"], input[type="number"] {
-      min-width: 400px;
-      padding: 5px;
       border-radius: 3px;
       border: 1px solid #ccc;
+      line-height: 2;
+      width: 100%;
     }
 
     #response {
@@ -34,22 +34,65 @@
 
     .submit {
       border: none;
-      background: cornflowerblue;
+      background: #fff;
       border-radius: 3px;
       padding: 5px;
+      flex-shrink: 0;
+      margin: 5px;
+      color: rgb(12, 171, 252);
+      border: 1px solid #E6ECF1;
+      box-shadow: 0 3px 8px 0 rgb(116 129 141 / 10%);
     }
 
-    html {
-      background: #efefef;
+    html, body {
       padding: 0;
-      margin: 0
+      margin: 0;
+      height: 100%;
     }
 
     body {
-      padding: 10px;
-      max-width: 800px;
-      margin: 0 auto;
       background: #fff;
+      font-family: 'Poppins', sans-serif;
+    }
+
+
+    main {
+      display: flex;
+      height: 100%;
+    }
+
+    #sidebar {
+      height: 100vh;
+      background: #F5F7F9;
+      border-right: 1px solid #E6ECF1;
+      padding: 0 5px;
+      flex-shrink: 0;
+    }
+
+    #result {
+      padding: 0 10px;
+      overflow: auto;
+    }
+
+    fieldset {
+      border-radius: 4px;
+      border-color: #fff;
+      padding: 5px;
+    }
+
+    @media all and (max-width: 800px) {
+      main {
+        flex-wrap: wrap;
+      }
+
+      #sidebar {
+        height: auto;
+        width: 100%;
+      }
+
+      label {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
@@ -62,32 +105,41 @@
 <script
  charset="UTF-8"
  src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/languages/json.min.js"></script>
-
-<h1>eBay API Browser example</h1>
-<p>This API use https://ebay.hendt.workers.dev/ as a Proxy.</p>
-<p>It's only mention for testing, do not abuse it or use in production.</p>
+<main>
+<div id="sidebar">
 <form>
+  <div>
+  <fieldset>
+    <legend>Credentials</legend>
   <label>
-    <span>AppId:</span>
+    <span>AppId:<span style="color:red">*</span></span>
     <input name="appId" placeholder="appId" type="text">
   </label>
   <label>
-    <span>Cert ID</span>
+    <span>Cert ID<span style="color:red">*</span></span>
     <input name="certId" placeholder="certId" type="text">
   </label>
   <label>
     <span>Dev ID</span>
     <input name="devId" placeholder="DevId" type="text">
   </label>
+  </fieldset>
+  <fieldset>
+     <legend>Config</legend>
   <label>
     <span>SiteId</span>
-    <input type="number" value="77" name="siteId">
+    <input type="number" value="0" name="siteId">
+  </label>
+  <label>
+    <span>Marketplace Id</span>
+    <input type="text" value="EBAY_US" name="marketplaceId">
   </label>
   <label>
     <span>Sandbox</span>
     <input type="checkbox" name="sandbox">
   </label>
-
+</fieldset>
+</div>
   <label>
     <span>Get Item</span>
     <input value="254188828753" name="itemId" type="text">
@@ -99,9 +151,19 @@
     <input value="" name="query" type="text">
     <button type="button" class="submit" onclick="search()">Search</button>
   </label>
-  <pre><code id="code"></code></pre>
 </form>
-
+</div>
+<div id="result">
+  <h1>eBay API Browser - Playground</h1>
+<ul>
+  <li><a href="https://hendt.gitbook.io/ebay-api/" target="_blank">Documentation</a></li>
+  <li><a href="https://github.com/hendt/ebay-api" target="_blank">GitHub</a></li>
+</ul>
+<p>This API use <span style="font-family: monospace;color: #333">https://ebay.hendt.workers.dev/</span> as a Proxy.</p>
+<p>It's only mention for testing, do not abuse it or use in production.</p>
+  <pre><code id="code"></code></pre>
+</div>
+</main>
 
 <script type="text/javascript">
   const form = document.forms[0]
@@ -116,6 +178,8 @@
 
       sandbox: form.sandbox.checked,
       siteId: form.siteId.value,
+      marketplaceId: form.marketplaceId.value,
+      contentLanguage: 'en-US'
     });
 
     eBay.req.instance.interceptors.request.use((request) => {
